finalize selection chapter

--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -44,21 +44,22 @@
 \newcommand{\ttbar}      {\mbox{$t\bar{t}$}}
 \newcommand{\bbbar}      {\mbox{$b\bar{b}$}}
 \newcommand{\pttbar}     {\mbox{$p_{t\bar{t}}$}}
-\newcommand{\ljets}      {\mbox{$l + \; jets$}}
-\newcommand{\ejets}      {\mbox{$e + \; jets$}}
-\newcommand{\mujets}     {\mbox{$\mu + \; jets$}}
-\newcommand{\wjets}     {\mbox{$W + \;jets$}}
-\newcommand{\wbb}     {\mbox{$Wb\bar{b}+\;jets$}}
-\newcommand{\wcc}     {\mbox{$Wc\bar{c}+\;jets$}}
-\newcommand{\wc}     {\mbox{$Wc+\;jets$}}
-\newcommand{\wlight}     {\mbox{$W+\;light~jets$}}
+\newcommand{\ljets}      {\mbox{$\ell$+jets}}
+\newcommand{\ejets}      {\mbox{$e$+jets}}
+\newcommand{\mujets}     {\mbox{$\mu$+jets}}
+\newcommand{\wjets}     {\mbox{$W$+jets}}
+\newcommand{\wbb}     {\mbox{$Wb\bar{b}$+jets}}
+\newcommand{\wcc}     {\mbox{$Wc\bar{c}$+jets}}
+\newcommand{\wc}     {\mbox{$Wc$+jets}}
+\newcommand{\wlight}     {\mbox{$W$+light jets}}
 \newcommand{\wpp}     {\mbox{$W^+$}}
 \newcommand{\wm}     {\mbox{$W^-$}}
-\newcommand{\zjets}     {\mbox{$Z +\;jets$}}
+\newcommand{\zjets}     {\mbox{$Z$+jets}}
 \newcommand{\herwig}     {{\tt HERWIG}}
 \newcommand{\pythia}     {{\tt PYTHIA}}
 \newcommand{\mcatnlo}     {{\tt MC@NLO}}
 \newcommand{\powheg}     {{\tt POWHEG}}
+\newcommand{\alpgen}     {{\tt ALPGEN}}
 \def\pt{\ensuremath{p_{\mathrm{T}}}}
 \def\mt{\ensuremath{m_{\mathrm{T}}}}
 \def\met{\mbox{\ensuremath{\not\!\!{E_{\mathrm{T}}}}}}
@@ -66,7 +67,7 @@
 \def\mexy{\mbox{\ensuremath{\not\!\!{E_{x,y}}}}}
 \def\mey{\mbox{\ensuremath{\not\!\!{E_y}}}}
 \def\et{\mbox{\ensuremath{E_{\mathrm{T}}}}}
-\newcommand{\mtw}{m_{\mathrm T}^W}
+\newcommand{\mtw}{\ensuremath{m_{\mathrm T}^W}}
 \newcommand{\effFake}{\ensuremath{\epsilon_{\mathrm{fake}}}}
 \newcommand{\effReal}{\ensuremath{\epsilon_{\mathrm{real}}}}
 
