final touches to first draft

--- a/tex/selection.tex
+++ b/tex/selection.tex
@@ -72,7 +72,7 @@ W boson are applied.\footnote{$\mt = \sqrt{2 p^\ell_{\rm T} \met
   azimuthal angle separation between the lepton and the direction of
   the missing transverse momentum.} Since the sample composition
 varies with the lepton flavor and $b$-jet multiplicity, different
-requirements are applied for each scenario, as detailed in table~\ref{tab:metmtwcuts}
+requirements are applied for each scenario, as detailed in table~\ref{tab:metmtwcuts}.
 
 \begin{table}
   \caption{Minimum \met{} and \mt{}(W) requirements.}
@@ -107,8 +107,8 @@ requirements are applied for each scenario, as detailed in table~\ref{tab:metmtw
 \label{sec:bckgmodel}
 
 The requirements described in section~\ref{sec:evtsel} are designed to
-select events with semi-leptonic decays of the \ttbar{} pair. However, fully
-leptonic decays can also be selected when one of the two lepton is not
+select semi-leptonic decays of the \ttbar{} pair. However, fully
+leptonic decays can also be selected when one of the two leptons is not
 reconstructed. These events are considered as part of the signal
 sample, notwithstanding that the top quark pair kinematics cannot be
 properly reconstructed under the semi-leptonic assumption.
@@ -116,15 +116,15 @@ properly reconstructed under the semi-leptonic assumption.
 Even though the requirements are designed to select the \ttbar{}
 topology, other processes contaminate the samples: $W$ and $Z$ boson
 production in association with jets (\wjets{},\zjets{}), single top,
-QCD multi-jets, and boson pair productions constitute a non-negligible
+QCD multi-jets, and $Z$/$W$ boson pair productions constitute a non-negligible
 fraction of the selected events.
 In the case of \wjets{} events, the largest background, the leptonic W
-decay produce a high-\pt{} isolated lepton, while the additional jets
+decay produces a high-\pt{} isolated lepton, while the additional jets
 production, including $b$-jets, mimics the hadronic top quark decay.
 Analogously the leptonic decays of a boson in \zjets{} and boson pairs
 productions feature high-\pt{} leptons reconstructed with high
 efficiency.
-On the other hand, the reconstruction of fake leptons happens seldom;
+On the contrary, the reconstruction of fake leptons happens seldom;
 however, a very small selection efficiency for QCD multi-jets
 production still results in a significant amount of background
 events, due to the large cross section.
@@ -132,7 +132,7 @@ events, due to the large cross section.
 The background composition of the data samples is estimated with Monte
 Carlo simulation and data-driven techniques. In particular the
 expected yield of \wjets{} events and the flavor composition of the
-associated jet is calibrated in-situ, while the QCD
+associated jets is calibrated in-situ, while the QCD
 multi-jet background is extrapolated from data control regions.
 
 \subsection{Simulated samples}
@@ -147,7 +147,7 @@ for each process are listed.
 
 The \ttbar{}+jets process is simulated using the \alpgen{} generator
 with the {\tt CTEQ6L1} PDF set~\cite{cteq6}, interfaced to the 
-\herwig parton shower (2011) and using \powheg{} with the {\tt CT10}
+\herwig{} parton shower (2011) and using \powheg{} with the {\tt CT10}
 PDF set~\cite{ct10}, interfaced to the \pythia{} parton shower
 (2012).
 
@@ -203,8 +203,8 @@ N_W = \left(\frac{N_{\wpp{}}+N_{\wm{}}}{N_{\wpp{}}-N_{\wm{}}}\right )_{\rm MC}(N
 charge of the reconstructed lepton. 
 
 The $W$ boson charge asymmetry observed in the MC simulation depends
-on the flavor composition of the sample, as \wbb{}, \wcc{}, \wc{}, \wlight{}
-processes have different charge conjugations.
+on the flavor composition of the sample, as the size and sign of the
+asymmetry varies for \wbb{}, \wcc{}, \wc{} and \wlight{} production.
 Therefore a calibration of the flavor composition is derived
 simultaneously with the estimation of the total normalization in
 equation~\ref{eq:nw}.
@@ -273,7 +273,7 @@ are:
 While the probability of a QCD multi-jets event being selected is very
 low, the production cross section for multi-jets events is orders of
 magnitude larger above that of \ttbar{} production.
-Because of this and the fact that these probabilities depend on the
+Because of this and the fact that this probability depends on the
 detector configuration and geometry, it is more efficient to
 extrapolate the multi-jet background in the selected sample from a
 control region with a technique referred to as {\it matrix method}.
@@ -308,14 +308,14 @@ leptons and for fake leptons. The signal efficiency
   \effReal{}
   = \frac{N^\mathrm{tight}_\mathrm{real}}{N^\mathrm{loose}_\mathrm{real}}
 \end{equation}
-can be measured with the tag-and-probe method in data dilepton events.
+is measured in data events with $Z$ boson decays in two leptons.
 The fake efficiency
 \begin{equation}
   \effFake{}
   = \frac{N^\mathrm{tight}_\mathrm{fake}}{N^\mathrm{loose}_\mathrm{fake}}.
   \label{eqn:intro-mm-real-fake}
 \end{equation}
-can be measured in data control regions where the contribution from
+is measured in data control regions where the contribution from
 fake leptons is larger. $\epsilon$ is parametrized as a
 function of kinematic observables such as lepton $\eta$ and \deltaR{\ell{}}{jet}. With these
 two efficiencies, one can solve the two linear
@@ -348,7 +348,7 @@ the \ejets{} channels are reported in tables~\ref{tab:yields2011}
 
 The modeling of the main background process is validated by comparing
 distributions as observed in the data samples with the corresponding
-predictions from simulation. Kinematic quantities of the reconstructed
+predictions from simulation. The kinematic quantities of the reconstructed
 objects used for selection are
 considered. Figures~\ref{fig:2011mu_pretag}
 and~\ref{fig:2011mu_tagged} (\mujets{}), and~\ref{fig:2011ele_pretag}
