first draft reconstruction chapter

--- a/main.tex
+++ b/main.tex
@@ -6,11 +6,13 @@
 
 \input{tex/preamble}
 
-\includeonly{tex/simulation}
+\includeonly{tex/reconstruction}
 
 \addbibresource{bib/experiment.bib}
 \addbibresource{bib/simulation.bib}
 \addbibresource{bib/objects.bib}
+\addbibresource{bib/selection.bib}
+\addbibresource{bib/reconstruction.bib}
  
 \begin{document} 
 
@@ -33,6 +35,7 @@
 \include{tex/simulation}
 \include{tex/objects}
 \include{tex/selection}
+\include{tex/reconstruction}
 
 \appendix
 
