--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -43,7 +43,12 @@
 \newcommand{\ssbar}      {\mbox{$s\bar{s}$}}
 \newcommand{\ttbar}      {\mbox{$t\bar{t}$}}
 \newcommand{\bbbar}      {\mbox{$b\bar{b}$}}
-\newcommand{\pttbar}     {\mbox{$p_{t\bar{t}}$}}
+\newcommand{\pttt}     {\mbox{$p_{t\bar{t}}$}}
+\newcommand{\mtt}     {\mbox{$m_{t\bar{t}}$}}
+\newcommand{\ytt}     {\mbox{$y_{t\bar{t}}$}}
+\newcommand{\betatt}     {\mbox{$\beta_{z,t\bar{t}}$}}
+\newcommand{\dy}     {\mbox{$\Delta|y|$}}
+\newcommand{\ac}     {\mbox{$A_C$}}
 \newcommand{\ljets}      {\mbox{$\ell$+jets}}
 \newcommand{\ejets}      {\mbox{$e$+jets}}
 \newcommand{\mujets}     {\mbox{$\mu$+jets}}
