--- a/tex/reconstruction.tex
+++ b/tex/reconstruction.tex
@@ -1,6 +1,209 @@
 \chapter{Kinematic Reconstruction}
-\label{sec:reco}
+\label{sec:reconstruction}
 
-In order to reconstruct kinematic quantities of the top quark pair,
-such as the invariant mass , the
-three jets corresponding to the 
+In order to access the kinematic quantities of the \ttbar{} system, a
+maximum likelihood approach~\cite{klfitter} is used to determine the
+four-momenta of the top and of the antitop quarks from the four-momenta of
+the reconstructed decay products: four reconstructed jets, one lepton, and the
+missing transverse momentum. The kinematic likelihood fit associates
+each reconstructed object to the corresponding final state particle:
+two $b$ quarks, two light quarks, one lepton and one neutrino.
+The free parameters of the likelihood are the parton energies, the
+lepton transverse momentum and the three neutrino momentum components,
+and the likelihood is defined as
+\begin{eqnarray}
+L & = & \mathcal{B}(\widetilde{E}_{\rm{p,}1}, \widetilde{E}_{\rm{p,}2} | m_W,  \Gamma_W)
+      \cdot \mathcal{B}(\widetilde{E}_{\rm l}, \widetilde{E}_{\nu} | m_W, \Gamma_W) \cdot \nonumber \\
+           &   & \mathcal{B}(\widetilde{E}_{\rm{p,}1}, \widetilde{E}_{\rm{p,}2},     \widetilde{E}_{\rm{p,}3} | m_t, \Gamma_t)
+                 \cdot \mathcal{B}(\widetilde{E}_{\rm l}, \widetilde{E}_{\nu},    \widetilde{E}_{\rm{p,}4} | m_t, \Gamma_t) \cdot \nonumber \\
+           &   & \mathcal{W}( \hat{E}_{x}^{miss}| \widetilde{p}_{x, \nu})
+                 \cdot \mathcal{W}(\hat{E}_{y}^{miss} |    \widetilde{p}_{y, \nu})
+                 \cdot \mathcal{W}(\hat{E}_{\rm{lep}} | \widetilde{E}_{\rm{lep}}) \cdot \nonumber \\
+           &   & \prod_{\rm{i=1}}^4 \mathcal{W}(\hat{E}_{\rm{jet,}i} | \widetilde{E}_{\rm{p,}i})
+                 \cdot P(\textrm{$b$ tag} ~| ~\textrm{quark}),
+\label{eq:klflikelihood}
+\end{eqnarray}
+where:
+\begin{itemize}
+\item the $\widetilde{\square{}}$ are the partonic quantities
+       and $\hat{\square{}}$ are the measured values;
+\item $\mathcal{B}$ is the Breit-Wigner parametrisation of the  parton
+      energies $\widetilde{E}_{\rm{p,}i}$ and lepton energy
+      $\widetilde{E}_{\rm{lep}}$;
+\item $\mathcal{W}$ is the transfer function mapping the measured energy
+      of a reconstructed object to the energy of the corresponding final state particle;
+\item $m_W$, $\Gamma_W$, $m_t$, and $\Gamma_t$ are fixed parameters with values
+       $m_W = 80.4~\GeV{}$, $\Gamma_W = 2.1~\GeV{}$, $m_t =
+       172.5~\GeV{}$, and $\Gamma_t = 1.5~\GeV{}$; 
+\item $P(b-\textrm{tag} ~| ~\textrm{quark})$ is the probability for a
+  jet, corresponding to a $b$ or light quark, to be $b$--tagged.
+\end{itemize}
+
+The likelihood is evaluated for all permutations of four reconstructed
+jets assigned to the four partons.
+In events where five or more jets were reconstructed, only
+the five highest-\pt{} jets are considered. The most probable
+combination, out of all the possible four-jets permutations, is
+chosen. 
+
+\section{Transfer Functions}
+\label{sec:transferfunctions}
+
+The transfer functions $\mathcal{W}(E_{truth}|E_{reco})$ describe the probability that the
+reconstructed energy $E_{reco}$ corresponds to a true value
+$E_{truth}$.
+The transfer functions are parametrized as double gaussians
+\begin{equation}
+  \label{eq:doublegaus}
+  \mathcal{W}(E_\mathrm{truth}|E_\mathrm{reco}) = \frac{1}{\sqrt{2\pi}(p_2+p_3p_5)}\Bigg[ \exp\Bigg(-\frac{(\Delta E - p_1)^2}{2p_2^2}\Bigg) + p_3\exp\Bigg(-\frac{(\Delta E - p_4)^2}\
+  {2p_5^2}\Bigg) \Bigg]\phantom{,}
+\end{equation}
+where $\Delta E = (E_{truth}-E_{reco})/E_{truth}$, and the $p_i$
+free parameters are estimated in different regions of $E_{truth}$ and
+$\eta$ for each particle. Figure~\ref{fig:transferfunctions} show, as
+example, the transfer functions for $b$ quarks and for electrons.  
+
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/btf}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/eletf}
+  \caption[Energy evolution of transfer functions]{
+    Energy evolution of the transfer functions for electrons in the
+    range $0.8<\eta<1.37$ (left) and for $b$ quarks in the range
+    $1.37<\eta<1.52$ (right). 
+    \label{fig:transferfunctions}
+    }
+\end{figure}
+
+\section{Comparison between data and prediction}
+\label{sec:datamcreco}
+
+The modeling of the reconstructed quantities is validated by comparing
+the distributions as observed in data with the prediction. 
+Figures~\ref{fig:datamcreco2011} and ~\ref{fig:datamcreco2012} show the comparison of the distributions of
+the top quark pair invariant mass \mtt{}, transverse momentum \pttt{},
+rapidity \ytt{}, and velocity along the beam axis \betatt{}. 
+                                   
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/dy}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/mtt}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/pttt}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/ytt}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/betatt}
+  \caption[Control plots for reconstructed quantities at $\sqrt{s} = 7
+  \TeV{}$]{Control plots for \dy{} (top left), invariant mass \mtt{} 
+    (top right), transverse momentum \pttt{} (centre left), rapidity
+    \ytt{} (centre right) and velocity \betatt{} (bottom)
+    distributions for the \ejets{} and \mujets{} channels combined in the
+    tagged sample at $\sqrt{s} = 7 \TeV{}$. The uncertainty on the
+    total prediction includes both the statistical and the systematic
+    components.} 
+  \label{fig:datamcreco2011}
+\end{figure}
+
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/dy}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/mtt}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/pttt}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/ytt}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/betatt}
+  \caption[Control plots for reconstructed quantities at $\sqrt{s} = 8
+  \TeV{}$]{Control plots for \dy{} (top left), invariant mass \mtt{} 
+    (top right), transverse momentum \pttt{} (centre left), rapidity
+    \ytt{} (centre right) and velocity \betatt{} (bottom)
+    distributions for the \ejets{} and \mujets{} channels combined in the
+    tagged sample at $\sqrt{s} = 8 \TeV{}$. The uncertainty on the
+    total prediction includes both the statistical and the systematic
+    components. [TO BE UPDATED]} 
+  \label{fig:datamcreco2012}
+\end{figure}
+
+
+\section{Performance}
+
+The most relevant benchmark of the reconstruction performance is the
+efficiency of reconstructing correctly the \dy{} sign, defined as
+\begin{equation}
+  \label{eq:dysign}
+  \epsilon = \frac{N(\dy{}_{truth}\cdot\dy{}_{reco}>0)}{N_{tot}}\phantom{.}
+\end{equation}
+Events where the \dy{} sign is measured incorrectly can occur when the top and
+antitop quarks are not reconstructed from the correct final
+state particles (mis-reconstruction). Even when the reconstruction
+algorithm associates the correct particles, small \dy{} values can be
+reconstructed with the wrong sign due to resolution effects.
+As a result the asymmetry of the distribution of reconstructed \dy{}
+is diluted by a factor 
+\begin{equation}
+  \label{eq:dilution}
+D = 2\times{}\epsilon - 1\phantom{.}
+\end{equation}  
+ 
+The efficiency $\epsilon$, measured in the \ttbar{} simulated sample,
+is $\approx75\%$ corresponding to a dilution factor
+$D=2\times0.75-1=0.5$.
+Figure~\ref{fig:dysign} shows the evolution of the efficiency $\epsilon$
+in different kinematic regions. The \dy{} reconstruction performs
+better at high \mtt{} and low \pttt{}, while there is no strong \ytt{}
+or \betatt{} dependence. 
+
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/mujets/correctDy_vs_mass}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/mujets/correctDy_vs_pt}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/mujets/correctDy_vs_y}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/mujets/correctDy_vs_beta}
+  \caption{
+    \label{fig:dysign}
+    Probability to reconstruct the correct \dy{} sign as a funcion of
+    the differential variables for the \mujets{} sample.
+  }
+\end{figure}
+
+Table~\ref{tab:actruthreco} shows the evolution of the asymmetry
+values due to selection and reconstruction effects.
+
+\begin{table}[!htb]\centering
+  \begin{tabular}{ l c c c}
+    \toprule
+    sample      & true \ac{} & true \ac{} after selection & reconstructed \ac{}\\
+    \midrule
+    \powheg{} &                &     &    \\
+    \mcatnlo{} &                &     &    \\
+    \bottomrule
+  \end{tabular}
+  \caption{\ac{} values in simulated \ttbar{} samples at truth and
+    reconstructed level}
+  \label{tab:actruthreco}
+\end{table}
+
+\subsection{Likelihood requirement}
+\label{sec:Reconstruction:lhood}
+
+For the analysis of the 2011 dataset collected at $\sqrt{s} = 8
+\TeV{}$, a requirement on reconstruction quality is applied to improve
+the resolution on reconstructed quantities.
+A 20\% reduction on the \ac{} uncertainty in the highest mass bin ($\mtt{}>750\GeV{}$)
+is achieved by requiring the logarithm of the likelihood ({\it log-likelihood}) to be $>-55$,
+as shown in Figure~\ref{fig:errvsllcut}.
+
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/asymm5errVsLLcut}
+  \caption{
+    \label{fig:errvsllcut}
+    Scan of the statistical uncertainty on \ac{} for $\mtt{}>750\GeV{}$
+    with different requirement on log-likelihood.
+  }
+\end{figure}
+
+The modeling of the log-likelihood is validated by comparing its
+distribution in data with the prediction, as shown in Figure~\ref{fig:logl}.
+
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/ejets/hll_datamc_1taginTRF}
+  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/mujets/hll_datamc_1taginTRF}                                                                            
+  \caption{
+    \label{fig:logl}
+    log-likelihood distributions for \ejets{} (left) and
+    for \mujets{} (right).
+    }
+\end{figure}
+
