comment out 8 TeV plots

--- a/tex/reconstruction.tex
+++ b/tex/reconstruction.tex
@@ -79,9 +79,12 @@ example, the transfer functions for $b$ quarks and for electrons.
 
 The modeling of the reconstructed quantities is validated by comparing
 the distributions as observed in data with the prediction. 
-Figures~\ref{fig:datamcreco2011} and ~\ref{fig:datamcreco2012} show the comparison of the distributions of
+Figure~\ref{fig:datamcreco2011} 
+%and ~\ref{fig:datamcreco2012}
+shows the comparison of the distributions of
 the top quark pair invariant mass \mtt{}, transverse momentum \pttt{},
-rapidity \ytt{}, and velocity along the beam axis \betatt{}. 
+rapidity \ytt{}, and velocity along the beam axis \betatt{} for the
+2011 dataset at $\sqrt{s} = 7 \TeV{}$.
                                    
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/dy}
@@ -100,22 +103,22 @@ rapidity \ytt{}, and velocity along the beam axis \betatt{}.
   \label{fig:datamcreco2011}
 \end{figure}
 
-\begin{figure}[!htb]\centering
-  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/dy}
-  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/mtt}
-  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/pttt}
-  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/ytt}
-  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/betatt}
-  \caption[Control plots for reconstructed quantities at $\sqrt{s} = 8
-  \TeV{}$]{Control plots for \dy{} (top left), invariant mass \mtt{} 
-    (top right), transverse momentum \pttt{} (centre left), rapidity
-    \ytt{} (centre right) and velocity \betatt{} (bottom)
-    distributions for the \ejets{} and \mujets{} channels combined in the
-    tagged sample at $\sqrt{s} = 8 \TeV{}$. The uncertainty on the
-    total prediction includes both the statistical and the systematic
-    components. [TO BE UPDATED]} 
-  \label{fig:datamcreco2012}
-\end{figure}
+%\begin{figure}[!htb]\centering
+%  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/dy}
+%  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/mtt}
+%  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/pttt}
+%  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/ytt}
+%  \includegraphics[width=0.495\textwidth]{figures/reconstruction/7TeV/betatt}
+%  \caption[Control plots for reconstructed quantities at $\sqrt{s} = 8
+%  \TeV{}$]{Control plots for \dy{} (top left), invariant mass \mtt{} 
+%    (top right), transverse momentum \pttt{} (centre left), rapidity
+%    \ytt{} (centre right) and velocity \betatt{} (bottom)
+%    distributions for the \ejets{} and \mujets{} channels combined in the
+%    tagged sample at $\sqrt{s} = 8 \TeV{}$. The uncertainty on the
+%    total prediction includes both the statistical and the systematic
+%    components. [TO BE UPDATED]} 
+%  \label{fig:datamcreco2012}
+%\end{figure}
 
 
 \section{Performance}
